<resources>
    <string name="app_name">معالجة التشوه البصرى</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="company_name"> شركة رينو لعمليات الصيانة </string>
    <string name="welcome_msg"> مرحبا بك فى تطبيق رينو لمعالجة التشوه البصرى</string>
    <string name="login_msg"> قم بتسجيل الدخول بحسابك الشخصى لتسجيل الخدمات من كافة الأدارات فى المؤسسة </string>
    <string name="login">تسجيل الدخول</string>
    <string name="login_userName_hint">البريد الألكترونى</string>
    <string name="login_password_hint">كلمة المرور</string>
    <string name="forgot_password">استعادة كلمة المرور</string>
    <string name="already_have_account">لديك حساب </string>
    <string name="edit_profile">"تعديل الحساب "</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="setting">الاعدادات</string>
    <string name="complaints">الشكاوى</string>
    <string name="services"> الخدمات الرئيسية </string>
    <string name="street">الشارع</string>
    <string name="municipalites">البلدية</string>
    <string name="sector">القطاع</string>
    <string name="districts">الحى</string>
    <string name="address">البيانات الأساسية</string>
    <string name="attachments">المرفقات</string>
    <string name="equipments">المعدات المستخدمة</string>
    <string name="select">اختر</string>
    <string name="workersType">الأفراد المشاركين</string>
    <string name="spicialItems">بيانات خاصة</string>
    <string name="mSquare">متر مربع ( م2 )</string>
    <string name="mCube">متر مكعب ( م3 )</string>
    <string name="numberR">عدد الردوم </string>
    <string name="notes">الملاحظات</string>
    <string name="submit">تسجيل</string>
    <string name="QRCode">الرمز التكويدى</string>
    <string name="navigateToHome">العودة للقائمة الرئيسية</string>
    <string name="Percentage"> نسبة الانجاز الكلية %</string>
    <string name="afterImage">الصورة بعد المهمة</string>
    <string name="beforeImage">الصورة قبل المهمة</string>
    <string name="reset_password_hint">كلمة المرور الجديدة</string>
    <string name="reset_confirm_password_hint">تأكيد كلمة المرور الجديدة</string>
    <string name="code">كود التفعيل</string>
    <string name="saveNewPaswword">حفظ كلمة المرور الجديدة</string>
    <string name="requestotpCode">"ارسال الكود "</string>
    <string name="dialogMessage">هل تريد حذف هذا العنصر؟</string>
    <string name="NoMessage">لا</string>
    <string name="yesMessage">نعم</string>
    <string name="next">التالى</string>
    <string name="DailyPreparation">التحضير اليومى </string>
    <string name="maintenance">الصيانة</string>
    <string name="rhino">"رينو لعمليات "</string>
    <string name="company">"شركة "</string>
    <string name="history">سجل الخدمات</string>
    <string name="duringImage">الصورة اثناء المهمة</string>
    <string name="EditDailyPreparation">تعديل التحضير اليومى</string>
    <string name="save">حفظ</string>
    <string name="close">الغاء</string>
    <string name="service_num">رقم الخدمة</string>
    <string name="task_num">رقم العملية</string>
    <string name="address_txt">عرض العنوان</string>
    <string name="period_time">المدة الزمنية</string>
    <string name="ViewQRCode">عرض الرمز التكويدى</string>
    <string name="no_internet"> لا يوجد اتصال بالانترنت</string>
    <string name="shareQRCodeInWhatsapp">"مشاركة عبر الواتساب "</string>
    <string name="internet">"متصل بالانترنت "</string>
    <string name="dismiss">تجاهل</string>
    <string name="required_field">برجاء ادخال هذا العنصر</string>
    <string name="required">"   مطلوب"</string>
    <string name="chars">حرف</string>
    <string name="FP_error">البصمة غير متطابقة</string>
    <string name="FP_success">بصمة متطابقة</string>
    <string name="invalid_email">بريد الكترونى خاطئ</string>
    <string name="email_must_less_than50">"البريد الالكترونى يجيب الا يزيد عن 50 حرف "</string>
    <string name="whatsApp_not_installed">الوتساب غير مثبت</string>
    <string name="cancel">الغاء</string>
    <string name="qrCode_must_4number">الكود ا لتفعيلى يجب ان يحتوى على 4 ارقام</string>
    <string name="weak_password">كلمة المرور ضعيفة</string>
    <string name="pass_not_matched">كلمة المرور غير متطابقة</string>
    <string name="no_data">لا توجد بيانات</string>
    <string name="try_again">حدث خطأ أثناء الاتصال بالانترنت, حاول مرة أخرى</string>
    <string name="connecting">جاري التحميل ...</string>
    <string name="success_login">تسجيل دخول ناجح</string>
    <string name="invalid_email_or_pass">خطأ فى البريد الالكترونى او كلمة المرور</string>
    <string name="search_hint">ابحث برقم العملية</string>
    <string name="company_name_en"><![CDATA[Rhino Maintenance & Operation & Cleaning]]></string>
    <string name="privacy_policy">سياسة الخصوصية</string>
    <string name="gallery">الاستوديو</string>
    <string name="camera">الكاميرا</string>
    <string name="service_Type">نوع الخدمة</string>
    <string name="created_date">تاريخ الانشاء</string>
    <string name="menetor_name">البريد الالكترونى</string>
    <string name="ViewLocation">عرض الموقع</string>
    <string name="wrong_qr_code">رقم تكويدى خاطئ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_all">عرض الكل</string>
    <string name="day">اليوم</string>
    <string name="full_address">"العنوان "</string>
    <string name="task">عملية</string>
    <string name="Authentication_Cancelled">تم الغاء البصمة برجاء تسجيل الدخول مرة اخرى</string>


</resources>