<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.resetPassward.ResetPasswordFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:paddingTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="30dp"
                android:background="@drawable/rectangle"
                android:focusableInTouchMode="true"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layoutDirection="rtl"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextEmail"
                        android:textSize="@dimen/newsMoreTextSize"
                        android:backgroundTint="@color/teal"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:hint="@string/login_userName_hint" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/otpCodeTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layoutDirection="rtl"
                    android:visibility="gone"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextOTPCode"
                        android:textDirection="rtl"
                        android:textSize="@dimen/newsMoreTextSize"
                        android:backgroundTint="@color/teal"
                        android:inputType="number"
                        android:maxLines="1"
                        android:hint="@string/code" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    android:layoutDirection="rtl"
                    app:passwordToggleDrawable="@drawable/show_password_selector"
                    android:layout_marginTop="10dp"
                    android:visibility="gone"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:errorEnabled="true">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextPassword"
                        android:layoutDirection="rtl"
                        android:textSize="@dimen/newsMoreTextSize"
                        android:backgroundTint="@color/black"
                        android:hint="@string/reset_password_hint"
                        android:maxLines="1"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>



                <Button
                    android:layout_height="wrap_content"
                    android:id="@+id/reuestOtpButton"
                    android:textColor="@color/white"
                    android:background="@drawable/rectangle_button"
                    android:textStyle="bold"
                    android:textSize="@dimen/newsMoreTextSize"
                    android:layout_width="230dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:text="@string/requestotpCode"
                    />
                <Button
                    android:layout_height="wrap_content"
                    android:layout_width="230dp"
                    android:id="@+id/saveButton"
                    android:visibility="gone"
                    android:textColor="@color/white"
                    android:background="@drawable/rectangle_button"
                    android:textStyle="bold"
                    android:textSize="@dimen/newsMoreTextSize"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:text="@string/saveNewPaswword" />


                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_marginTop="30dp"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foregroundGravity="center"
                    android:layout_gravity="center_horizontal"
                    />


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>